--- a/index.html
+++ b/index.html
@@ -19,36 +19,36 @@
                 <option value="zh">中文</option>
             </select>
         </div>
-
+        <img src="images/perla logo site.png" alt="Perla Homes Logo" id="logo" />
         <!-- Buttons -->
         <div class="button-container">
             <div class="button-item">
                 <button class="round-btn" onclick="window.location.href='checkin.html'">
-                    <img src="images/perla homes.jpg" alt="Check-In">
+                    <img src="images/check in.png" alt="Check-In">
                 </button>
-                <span>Check-In</span>
+                <span>Check-In <br>Instructions</span>
             </div>
             <div class="button-item">
                 <button class="round-btn" onclick="window.location.href='wifi.html'">
-                    <img src="images/Pisina.jpg" alt="Wifi">
+                    <img src="images/wifi2.png" alt="Wifi">
                 </button>
                 <span>Wifi</span>
             </div>
             <div class="button-item">
                 <button class="round-btn" onclick="window.location.href='map.html'">
-                    <img src="images/wifi.png" alt="Map">
+                    <img src="images/map.jpg" alt="Map">
                 </button>
                 <span>Map</span>
             </div>
             <div class="button-item">
-                <button class="round-btn" onclick="window.location.href='mobi.html'">
-                    <img src="mobi-icon.jpg" alt="Mobi">
-                </button>
-                <span>Mobi</span>
+                <a href="https://messinia.mobi/el">
+                    <img src="images/MOBI.png" alt="Mobi" class="round-btn">
+                    <span>Mobi</span>
+                </a>
             </div>
             <div class="button-item">
                 <button class="round-btn" onclick="window.location.href='contact.html'">
-                    <img src="contact-icon.jpg" alt="Contact">
+                    <img src="images/pngtree-circle-phone-call-icon-in-black-color-png-image_6596895.png" alt="Contact">
                 </button>
                 <span>Contact</span>
             </div>
@@ -57,7 +57,7 @@
 
     <!-- Footer -->
     <div class="footer">
-        <p>&copy; 2025 Your Company Name. All rights reserved.</p>
+        <p>&copy; 2025 Perla Homes. All rights reserved.</p>
     </div>
 
     <script src="script.js"></script>
