--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
     <title>Landing Page</title>
     <link rel="stylesheet" href="main.css">
 </head>
@@ -10,16 +12,12 @@
     <!-- Main Content Section -->
     <div class="content-container">
         <!-- Language Selector -->
-        <div class="language-selector">
-            <select id="language" onchange="changeLanguage()">
-                <option value="en">English</option>
-                <option value="es">Español</option>
-                <option value="fr">Français</option>
-                <option value="de">Deutsch</option>
-                <option value="zh">中文</option>
-            </select>
+        <div id="google_translate_element"></div>
         </div>
         <img src="images/perla logo site.png" alt="Perla Homes Logo" id="logo" />
+
+        <h1 id="main-heading">Welcome to Perla Homes</h1>
+
         <!-- Buttons -->
         <div class="button-container">
             <div class="button-item">
@@ -61,5 +59,17 @@
     </div>
 
     <script src="script.js"></script>
+    <script src="script.js"></script>
+<script type="text/javascript">
+    function googleTranslateElementInit() {
+        new google.translate.TranslateElement({
+            pageLanguage: 'en',
+            includedLanguages: 'en,el,it,pt,ro,es,fr,ka,de,cs,hy,sq,ru', // Add more languages as needed
+            layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+        }, 'google_translate_element');
+    }
+</script>
+    <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
 </body>
 </html>
