--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
-    <title>Landing Page</title>
+    <title>Perla Homes</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -16,7 +16,8 @@
         </div>
         <img src="images/perla logo site.png" alt="Perla Homes Logo" id="logo" />
 
-        <h1 id="main-heading">Welcome to Perla Homes</h1>
+        <h1 id="main-heading">Welcome to <br> Mediterranean Heaven</h1>
+        <p>Faron 146 &nbsp;&bull;&nbsp; 2nd Floor &nbsp;&bull;&nbsp; Never asked for this</p>
 
         <!-- Buttons -->
         <div class="button-container">
