--- a/index.html
+++ b/index.html
@@ -12,39 +12,38 @@
     <!-- Main Content Section -->
     <div class="content-container">
         <!-- Language Selector -->
-        <div id="google_translate_element"></div>
-        </div>
-        <img src="images/perla logo site.png" alt="Perla Homes Logo" id="logo" />
+        <div id="google_translate_element" class="fade-in"></div>
+        <img src="images/perla logo site.png" alt="Perla Homes Logo" id="logo" class="fade-in" />
 
-        <h1 id="main-heading">Welcome to <br> Mediterranean Heaven</h1>
+        <h1 id="main-heading" class="fade-in">Welcome to <br> Mediterranean Heaven</h1>
 
         <!-- Buttons -->
         <div class="button-container">
-            <div class="button-item">
+            <div class="button-item fade-in">
                 <button class="round-btn" onclick="window.location.href='checkin.html'">
                     <img src="images/check in.png" alt="Check-In">
                 </button>
-                <span>Check-In <br>Instructions</span>
+                <span>Check-In <br> Instructions</span>
             </div>
-            <div class="button-item">
+            <div class="button-item fade-in">
                 <button class="round-btn" onclick="window.location.href='wifi.html'">
                     <img src="images/wifi2.png" alt="Wifi">
                 </button>
                 <span>Wifi</span>
             </div>
-            <div class="button-item">
+            <div class="button-item fade-in">
                 <button class="round-btn" onclick="window.location.href='map.html'">
                     <img src="images/map.jpg" alt="Map">
                 </button>
                 <span>Map</span>
             </div>
-            <div class="button-item">
+            <div class="button-item fade-in">
                 <a href="https://messinia.mobi/el">
                     <img src="images/MOBI.png" alt="Mobi" class="round-btn">
                     <span>Mobi</span>
                 </a>
             </div>
-            <div class="button-item">
+            <div class="button-item fade-in">
                 <button class="round-btn" onclick="window.location.href='contact.html'">
                     <img src="images/pngtree-circle-phone-call-icon-in-black-color-png-image_6596895.png" alt="Contact">
                 </button>
@@ -54,22 +53,21 @@
     </div>
 
     <!-- Footer -->
-    <div class="footer">
+    <div class="footer fade-in">
         <p>&copy; 2025 Perla Homes. All rights reserved.</p>
     </div>
 
     <script src="script.js"></script>
     <script src="script.js"></script>
-<script type="text/javascript">
-    function googleTranslateElementInit() {
-        new google.translate.TranslateElement({
-            pageLanguage: 'en',
-            includedLanguages: 'en,el,it,pt,ro,es,fr,ka,de,cs,hy,sq,ru', // Add more languages as needed
-            layout: google.translate.TranslateElement.InlineLayout.SIMPLE
-        }, 'google_translate_element');
-    }
-</script>
+    <script type="text/javascript">
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement({
+                pageLanguage: 'en',
+                includedLanguages: 'en,el,it,pt,ro,es,fr,ka,de,cs,hy,sq,ru', // Add more languages as needed
+                layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+            }, 'google_translate_element');
+        }
+    </script>
     <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 </body>
-</html>
