--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="button-item fade-in">
                 <a href="https://messinia.mobi/el">
-                    <img src="images/MOBI (1).png" alt="Mobi" class="round-btn">
+                    <img src="images/optiki-tautotita_2.jpg" alt="Mobi" class="round-btn">
                     <span>Mobi</span>
                 </a>
             </div>
