--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="button-container">
             <div class="button-item fade-in">
                 <button class="round-btn" onclick="window.location.href='checkin.html'">
-                    <img src="images/check in.png" alt="Check-In">
+                    <img src="images/check in.new.jpeg" alt="Check-In">
                 </button>
                 <span>Check-In <br> Instructions</span>
             </div>
@@ -32,10 +32,18 @@
                 <span>Wifi</span>
             </div>
             <div class="button-item fade-in">
-                <button class="round-btn" onclick="window.location.href='map.html'">
-                    <img src="images/map.jpg" alt="Map">
+                <button class="round-btn" onclick="window.location.href='wifi.html'">
+                    <img src="images/master lock.jpg" alt="Wifi">
                 </button>
-                <span>Map</span>
+                <span>Key-Lock<br>Code</span>
+            </div>
+            <div class="button-item fade-in">
+                <a href="map.html">
+                    <button class="round-btn">
+                        <img src="images/map.jpg" alt="Map">
+                    </button>
+                    <span>Map</span>
+                </a>
             </div>
             <div class="button-item fade-in">
                 <a href="https://messinia.mobi/el">
@@ -44,16 +52,19 @@
                 </a>
             </div>
             <div class="button-item fade-in">
-                <button class="round-btn" onclick="window.location.href='contact.html'">
-                    <img src="images/pngtree-circle-phone-call-icon-in-black-color-png-image_6596895.png" alt="Contact">
-                </button>
-                <span>Contact</span>
+                <a href="contacts.html">
+                    <button class="round-btn">
+                        <img src="images/pngtree-circle-phone-call-icon-in-black-color-png-image_6596895.png" alt="Map">
+                    </button>
+                    <span>Contacts</span>
+                </a>
             </div>
         </div>
     </div>
 
     <!-- Footer -->
     <div class="footer fade-in">
+        <a href="https://www.example.com" target="_blank">Perlahomes.gr</a>
         <p>&copy; 2025 Perla Homes. All rights reserved.</p>
     </div>
 
