--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             
             <!-- Hidden Wifi Code Box -->
-            <div id="wifiCodeBox" style="display:none; padding: 10px; background-color: #0e0d0d; border: 1px solid #ccc; width: 200px; height: auto; max-width: 100%; text-align: center;">
+            <div id="wifiCodeBox" style="display:none; padding: 10px; background-color: #0e0d0d; border: 1px solid #ccc; width: 200px; height: auto; max-width: 100%; text-align: center; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);">
                 <p> WiFi User: <strong>Mediterranean Heaven</strong></p> <br>
                 <p> Password: <strong>Perla2024</strong></p>
                 <button onclick="hideWifiCodeBox()">Close</button>
