--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
             
             <!-- Hidden Code Box -->
-            <div id="CodeBox" style="display:none; padding: 10px; background-color: #0e0d0d; border: 1px solid #ccc; width: 200px; height: auto; max-width: 100%; text-align: center; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);">
+            <div id="wifiCodeBox" style="display:none; padding: 10px; background-color: #0e0d0d; border: 1px solid #ccc; width: 200px; height: auto; max-width: 100%; text-align: center; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);">
                 <p>Your Code: <strong>1619</strong></p>
                 <button onclick="hideCodeBox()">Close</button>
             </div>
