--- a/check_in.html
+++ b/check_in.html
@@ -17,10 +17,32 @@
 
         <h1 id="main-heading" class="fade-in">Welcome to <br> Mediterranean Heaven</h1>
 
-        <!-- Buttons -->
+        <div class="step">
+            <img src="images/Front_door.jpg"id="logo" alt="Access Code">
+        </div>
+
+        <div class="step">
+            <h2>Apartment on the 3rd floor</h2>
+            <img src="images/Portamesa.jpg"id="logo" alt="Access Code">
+        </div>
+
+        <div class="step">
+            <h2>Hot Water</h2>
+            <p>For hot water please switch on and press the button in the electrical panel and it will turn off after 30 minutes before use.<br>
+
+            <img src="images/Pinakas_heaven.jpg"id="logo" alt="Access Code">
+        </div>
+
      
 
-    <!-- Footer -->
+   
+   
+   
+   
+   
+   
+   
+        <!-- Footer -->
     <div class="footer fade-in">
         <p>&copy; 2025 Perla Homes. All rights reserved.</p>
     </div>
