--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Buttons -->
         <div class="button-container">
             <div class="button-item fade-in">
-                <button class="round-btn" onclick="window.location.href='checkin.html'">
+                <button class="round-btn" onclick="window.location.href='check_in.html'">
                     <img src="images/check in.new.jpeg" alt="Check-In">
                 </button>
                 <span>Check-In <br> Instructions</span>
@@ -42,7 +42,7 @@
 
             <div class="button-item fade-in">
                 <button class="round-btn" onclick="showCodeBox()">
-                    <img src="images/master lock.jpg" alt="Wifi">
+                    <img src="images/Key lock Heavenmono.jpg" alt="Wifi">
                 </button>
                 <span>Key-Lock<br>Code</span>
             </div>
