--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    
 
     <title>Perla Homes</title>
     <link rel="stylesheet" href="main.css">
@@ -21,9 +22,9 @@
         <div class="button-container">
             <div class="button-item fade-in">
                 <button class="round-btn" onclick="window.location.href='check_in.html'">
-                    <img src="images/check in.new.jpeg" alt="Check-In">
+                    <img src="images/Checkin.png" alt="Check-In">
                 </button>
-                <span>Check-In <br> Instructions</span>
+                <span>Check-In <br> </span>
             </div>
 
             <div class="button-item fade-in">
@@ -44,7 +45,7 @@
                 <button class="round-btn" onclick="showCodeBox()">
                     <img src="images/Key lock Heavenmono.jpg" alt="Wifi">
                 </button>
-                <span>KeyCode</span>
+                <span>Code</span>
             </div>
             
             <!-- Hidden Code Box -->
