--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <button class="round-btn" onclick="showCodeBox()">
                     <img src="images/Key lock Heavenmono.jpg" alt="Wifi">
                 </button>
-                <span>Pin</span>
+                <span>key</span>
             </div>
             
             <!-- Hidden Code Box -->
