--- a/check_in.html
+++ b/check_in.html
@@ -11,6 +11,11 @@
 <body>
     <!-- Main Content Section -->
     <div class="content-container">
+        <!-- Home Button -->
+        <a href="index.html" class="home-button fade-in">
+            <button>Back</button>
+        </a>
+
         <!-- Language Selector -->
         <div id="google_translate_element" class="fade-in"></div>
 
