--- a/contacts.html
+++ b/contacts.html
@@ -11,6 +11,10 @@
 <body>
     <!-- Main Content Section -->
     <div class="content-container">
+
+        <a href="index.html" class="home-button fade-in">
+            <button>Home Page</button>
+        </a>
         <!-- Language Selector -->
         <div id="google_translate_element" class="fade-in"></div>
         <img src="images/perla logo site.png" alt="Perla Homes Logo" id="logo" class="fade-in" />
