--- a/check_in.html
+++ b/check_in.html
@@ -13,7 +13,7 @@
     <div class="content-container">
         <!-- Home Button -->
         <a href="index.html" class="home-button fade-in">
-            <button>Back</button>
+            <button>Home Page</button>
         </a>
 
         <!-- Language Selector -->
