--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             
             <!-- Hidden Wifi Code Box -->
             <div id="wifiCodeBox" style="display:none; padding: 10px; background-color: #0e0d0d; border: 1px solid #ccc; width: 200px; height: auto; max-width: 100%; text-align: center; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);">
-                <p> WiFi User: <strong>Mediterranean Heaven</strong></p> <br>
+                <p> Network: <strong>Mediterranean Heaven</strong></p> <br>
                 <p> Password: <strong>Perla2024</strong></p>
                 <button onclick="hideWifiCodeBox()">Close</button>
             </div>
@@ -64,7 +64,7 @@
             <div class="button-item fade-in">
                 <a href="https://messinia.mobi/el">
                     <img src="images/optiki-tautotita_2.jpg" alt="Mobi" class="round-btn">
-                    <span>Mobi</span>
+                    <span>Tourist Guide</span>
                 </a>
             </div>
             <div class="button-item fade-in">
