--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="button-item fade-in">
                 <a href="https://messinia.mobi/el">
                     <img src="images/optiki-tautotita_2.jpg" alt="Mobi" class="round-btn">
-                    <span>Tourist<br>Guide</span>
+                    <span>Town<br>Guide</span>
                 </a>
             </div>
             <div class="button-item fade-in">
