--- a/index.html
+++ b/index.html
@@ -64,9 +64,10 @@
             <div class="button-item fade-in">
                 <a href="https://messinia.mobi/el">
                     <img src="images/optiki-tautotita_2.jpg" alt="Mobi" class="round-btn">
-                    <span>Town<br>Guide</span>
+                    <span style="display:block;">Tourist<br>Guide</span>
                 </a>
             </div>
+            
             <div class="button-item fade-in">
                 <a href="contacts.html">
                     <button class="round-btn">
