--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <div id="google_translate_element" class="fade-in"></div>
         <img src="images/perla logo site.png" alt="Perla Homes Logo" id="logo" class="fade-in" />
 
-        <h1 id="main-heading" class="fade-in" translate="no">
-            Welcome to <br> Mediterranean Heaven
-        </h1>
+        <h1 id="main-heading" class="fade-in">
+    Welcome to <br> <span translate="no">Mediterranean Heaven</span>
+</h1>
 
         <!-- Buttons -->
         <div class="button-container">
