--- a/check_in.html
+++ b/check_in.html
@@ -27,7 +27,7 @@
 
         <!-- Images and Content -->
         <div class="content">
-            <img src="images/Front_door.jpg" id="front-door" alt="Access Code" />
+            <img src="images/Medit_front.jpg" id="front-door" alt="Access Code" />
         
             <h2>Key-Lock</h2>
             <h2>The key-lock is located next to the entrance door.</h2>
