--- a/check_in.html
+++ b/check_in.html
@@ -42,7 +42,7 @@
             <p>Please during check-out leave the keys on the table and close the door. Thank You!</p>
         
             <h2>Hot Water</h2>
-            <p>For hot water please switch on and press the button in the electrical panel and it will turn off after 30 minutes before use.</p>
+            <p>The property has a solar water heater. In case there is no hot water, please turn on the water heater for about 30 minutes.</p>
             <img src="images/Pinakas_heaven.jpg" id="hot-water" alt="Access Code">
         </div>
 
