--- a/check_in.html
+++ b/check_in.html
@@ -39,7 +39,7 @@
         
             <h2>Check-out</h2>
             <h2>Check-out Time 11:00 AM.</h2>
-            <p>Please during check-out leave the keys on the table and close the door. Thank You!</p>
+            <p>Please during check-out leave the keys on the table and close the door. <br>Thank you for trusting us and choosing one of our accommodations!</p>
         
             <h2>Hot Water</h2>
             <p>The property has a solar water heater. In case there is no hot water, please turn on the water heater for about 30 minutes.</p>
