--- a/check_in.html
+++ b/check_in.html
@@ -47,9 +47,24 @@
         </div>
 
     <!-- Footer -->
-    <div class="footer fade-in">
+     <div class="footer fade-in">
+       
+        
+        <!-- Social Media Links -->
+        <div class="social-media">
+            <a href="https://www.perlahomes.gr" target="_blank">
+                <i class="fas fa-globe social-icon"></i>
+            </a>
+            <a href="https://www.facebook.com/PerlaHomesgr/" target="_blank">
+                <i class="fab fa-facebook social-icon"></i>
+            </a>
+            <a href="https://www.instagram.com/perla.homes/?hl=el" target="_blank">
+                <i class="fab fa-instagram social-icon"></i>
+            </a>
+        </div>
         <p>&copy; 2025 Perla Homes. All rights reserved.</p>
     </div>
+
 
     <script src="script.js"></script>
     <script type="text/javascript">
